# youtube_transciption_collector

./: .gitignore  README.md  main.py  pyproject.toml  starter_story.ipynb  utils.py
examples/: starter_story.ipynb
src/starter_story_collector/: __init__.py  __main__.py
src/youtube_transcript_collector/: __init__.py  __main__.py  api.py  config.py  transcript.py  utils.py
