[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "youtube-transcript-collector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "youtube-transcript-api>=1.2.3",
]

[project.scripts]
youtube-transcript-collector = "youtube_transcript_collector.__main__:main"

[tool.hatch.build]
include = ["src/youtube_transcript_collector"]

[dependency-groups]
dev = ["ipykernel>=7.1.0"]
